--- a/src/main/resources/ba/unsa/etf/rpr/t7z1/hello-view.fxml
+++ b/src/main/resources/ba/unsa/etf/rpr/t7z1/hello-view.fxml
@@ -19,7 +19,7 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ListView prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="5">
+      <ListView fx:id="listaKorisnika" onMouseClicked="#popuniPodatkeKorisnika" prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="5">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
@@ -49,35 +49,35 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </Label>
-      <TextField maxWidth="1.7976931348623157E308" GridPane.columnIndex="2">
+      <TextField fx:id="imeId" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </TextField>
-      <TextField GridPane.columnIndex="2" GridPane.rowIndex="1">
+      <TextField fx:id="prezimeId" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </TextField>
-      <TextField GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <TextField fx:id="emailId" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </TextField>
-      <TextField GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <TextField fx:id="usernameId" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </TextField>
-      <PasswordField GridPane.columnIndex="2" GridPane.rowIndex="4">
+      <PasswordField fx:id="passwordId" GridPane.columnIndex="2" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </PasswordField>
       <ButtonBar prefHeight="40.0" prefWidth="326.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5">
         <buttons>
-          <Button mnemonicParsing="false" text="Dodaj" />
-            <Button mnemonicParsing="false" text="Kraj" />
+          <Button fx:id="dodajBtn" mnemonicParsing="false" onAction="#DodajKorisnika" text="Dodaj" />
+            <Button fx:id="krajBtn" mnemonicParsing="false" onAction="#ZavrsiProgram" text="Kraj" />
         </buttons>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
